# lander

app/: index.html  package-lock.json
app/src/: App.svelte  app.css
app/src/lib/: ConfigButton.svelte  ConfigPopup.svelte  Dashboard.svelte  Date.svelte
lander/: Cargo.toml
lander/src/: app.rs  main.rs
